styles.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body {
  font: 14px/1.5 Inter, sans-serif;
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;

  background-color: hsl(0, 0%, 8%);
}

.card {
  width: 25rem;
  padding: 2rem;
  text-align: center;
  border: 1px solid hsl(0, 0%, 12%);
  border-radius: 10px;
  background-color: hsl(0, 0%, 12%);
  margin: auto;
}

.info img {
  width: 80px;
  height: auto;
  border-radius: 50%;
  margin-bottom: 1rem;
}

.info h2 {
  font-size: 23px;
  color: hsl(0, 0%, 100%);
  font-weight: 700;
}

.info p:first-of-type {
  font-weight: 600;
  color: hsl(75, 94%, 57%);
  font-size: 14px;
  margin-bottom: 1rem;
}

.info p:last-of-type {
  color: hsl(0, 0%, 100%);
  margin-bottom: 1rem;
}

.links {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  justify-content: space-evenly;
  margin-top: 2rem;
}

.links button {
  background-color: hsl(0, 0%, 20%);
  border: 1px solid hsl(0, 0%, 20%);
  border-radius: 10px;
  height: 3rem;
  cursor: pointer;
}

.links a {
  text-decoration: none;
  color: hsl(0, 0%, 100%);
  font-weight: 600;
}

.links button:hover {
  background-color: hsl(75, 94%, 57%);
}

.links button:hover a {
  color: hsl(0, 0%, 20%)
}

@media (max-width: 375px) {
    .card{
        width: 85%;
    }
}

